# s4lt

./: .gitignore  MODSITE-README.md  README-INSTALL.md  README.md  build-appimage.sh  pyproject.toml  s4lt.spec
appimage/: AppImageBuilder.yml  build.sh  s4lt.desktop  s4lt.spec
docs/: CNAME  S4LT-FULL-SPEC.md  index.html
docs/plans/: 2025-12-26-dbpf-core-engine-design.md  2025-12-27-phase1-dbpf-core-engine.md  2025-12-27-phase2-mod-scanner-design.md  2025-12-27-phase2-mod-scanner.md  2025-12-27-phase3-tray-manager.md  2025-12-27-phase4-cc-tracker-design.md  2025-12-27-phase4-cc-tracker.md  2025-12-27-phase4-implementation.md  2025-12-27-phase4-organization-design.md  2025-12-27-phase5-web-ui.md  2025-12-27-phase6-package-editor-design.md  2025-12-27-phase6-package-editor.md  2025-12-28-appimage-packaging-design.md  2025-12-28-steam-deck-features-design.md  2025-12-28-steam-deck-features.md
s4lt/: __init__.py  logging.py
s4lt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
s4lt/cli/: __init__.py  main.py  output.py  package_info.py
s4lt/config/: __init__.py  paths.py  settings.py
s4lt/conflicts/: __init__.py  detector.py
s4lt/core/: __init__.py  categorizer.py  compression.py  exceptions.py  header.py  index.py  package.py  resource.py  thumbnails.py  types.py  writer.py
s4lt/db/: __init__.py  operations.py  schema.py
s4lt/deck/: __init__.py  detection.py  steam.py  storage.py
s4lt/desktop/: __init__.py  app.py  launcher.py  tray.py
s4lt/ea/: __init__.py  database.py  exceptions.py  paths.py  scanner.py
s4lt/editor/: __init__.py  merge.py  preview.py  session.py  split.py  stbl.py  xml_schema.py
s4lt/mods/: __init__.py  conflicts.py  duplicates.py  indexer.py  scanner.py
s4lt/organize/: __init__.py  batch.py  categorizer.py  exceptions.py  profiles.py  sorter.py  toggle.py  vanilla.py
s4lt/tray/: __init__.py  cc_tracker.py  exceptions.py  item.py  scanner.py  thumbnails.py  trayitem.py
s4lt/web/: __init__.py  app.py  deps.py  paths.py
tests/cli/: test_ea.py  test_output.py  test_tray.py
tests/config/: test_paths.py  test_tray_paths.py
tests/core/: test_compression.py  test_compression_write.py  test_header.py  test_index.py  test_package.py  test_package_write.py  test_refpack.py  test_resource.py  test_types.py
tests/db/: test_operations.py  test_schema.py
tests/deck/: __init__.py  test_detection.py  test_steam.py  test_storage.py
tests/ea/: __init__.py  test_database.py  test_paths.py  test_scanner.py
tests/editor/: __init__.py  test_merge.py  test_preview.py  test_session.py  test_split.py  test_stbl.py  test_xml_schema.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  (+1 more)
(+69 files in other folders)
