[project]
name = "s4lt"
version = "0.6.0"
description = "Sims 4 Linux Toolkit"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26.0"]

[project.scripts]
s4lt = "s4lt.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["s4lt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
